# LidarGS

./: .gitignore  CLAUDE.md  LidarGS_Implementation_Guide.md  LidarGS_Research.md  setup_env.sh
data/raw/scene_lab/: metadata.json
ios/LidarCapture/LidarCapture/: ARSessionManager.swift  ContentView.swift  LidarCaptureApp.swift
ios/LidarCapture/LidarCapture.xcodeproj/: project.pbxproj
ios/LidarCapture/LidarCapture/Models/: CaptureMetadata.swift  CapturedFrame.swift
ios/LidarCapture/LidarCapture/Utilities/: DepthUtils.swift  ImageUtils.swift  MatrixExtensions.swift
ios/LidarCapture/LidarCapture/Views/: CaptureView.swift  ExportView.swift  ReviewView.swift
python/: environment.yml  pyproject.toml
python/lidargs/: __init__.py
python/lidargs/depth/: backproject.py  filter.py  merge_clouds.py
python/lidargs/io/: export_colmap.py  export_nerfstudio.py  export_ply.py  load_capture.py  run_colmap.py
python/lidargs/transform/: arkit_to_colmap.py  arkit_to_gsplat.py  arkit_to_nerfstudio.py  intrinsics.py
python/lidargs/viz/: visualize_poses.py
python/scripts/: 01_process_capture.py  run_colmap.sh
python/tests/: conftest.py  test_backproject.py  test_transforms.py
