[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lidargs"
version = "0.1.0"
description = "COLMAP-free 3D Gaussian Splatting pipeline using iPhone LiDAR"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "open3d>=0.18",
    "pillow>=10.0",
    "imageio>=2.31",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
train = [
    "torch>=2.1",
    "torchvision>=0.16",
    "gsplat>=1.0",
    "torchmetrics>=1.0",
    "lpips>=0.1.4",
    "tensorboard>=2.14",
]

[tool.setuptools.packages.find]
where = ["."]
